Mofification de la page Home et création des autres vues.

--- a/Meteo/Meteo.csproj
+++ b/Meteo/Meteo.csproj
@@ -123,6 +123,15 @@
 	  <MauiXaml Update="Views\CurrentWidget.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\Next24HrWidget.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\Next7DWidget.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\WidgetsPanel.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\WindLiveWidget.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
